--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_ServiceDefaultComponentPartial/Default.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_ServiceDefaultComponentPartial/Default.cshtml
@@ -8,7 +8,7 @@
                 <div class="why-box">
                     <h3>Neden Bizi Tercih Etmelisiniz?</h3>
                     <p>
-                        Çünkü biz iyiyiz.
+                        Neden Yummy? Çünkü biz her yemeği bir sanat eseri gibi hazırlarız. Sıcacık servis, güler yüzlü ekip ve doyumsuz lezzetlerle her gelişinizde unutulmaz bir sofra kurarız. Lezzeti ve huzuru aynı tabakta bulacaksınız.
                     </p>
                     <div class="text-center">
                         <a href="#" class="more-btn"><span>Daha Fazla</span> <i class="bi bi-chevron-right"></i></a>
@@ -22,8 +22,8 @@
                     <div class="col-xl-4">
                         <div class="icon-box d-flex flex-column justify-content-center align-items-center">
                             <i class="bi bi-clipboard-data"></i>
-                            <h4>Corporis voluptates officia eiusmod</h4>
-                            <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                            <h4>Sıcak servis, samimi ortam</h4>
+                            <p>Konforlu ortamımızda yemeklerinizi keyifle yiyin, kendinizi evinizde hissedin.</p>
                         </div>
                     </div><!-- End Icon Box -->
 
