added note to do

--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_ServiceDefaultComponentPartial/Default.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_ServiceDefaultComponentPartial/Default.cshtml
@@ -26,7 +26,7 @@
                     {
                         <div class="col-xl-4">
                             <div class="icon-box d-flex flex-column justify-content-center align-items-center">
-                                <i class="@item.IconUrl"></i>
+                                <i class="@item.IconUrl"></i>  <!--Icon-->
                                 <h4>@item.ServiceTitle</h4>
                                 <p>@item.Description</p>
                             </div>
