--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_NavbarDefaultComponentPartial/Default.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_NavbarDefaultComponentPartial/Default.cshtml
@@ -16,8 +16,8 @@
                 <li><a href="#about">Hakkımızda</a></li>
                 <li><a href="#menu">Menü</a></li>
                 <li><a href="#events">Etkinlikler</a></li>
-                <li><a href="#chefs">Şeflerimiz</a></li>
-                <li><a href="#gallery">Galeri</a></li>
+                
+                <!-- Şefler eklendikten sonra buraya dropdown eklenecek !--->
                 <!--- Dropdown (Commented)
                 <li class="dropdown">
                     <a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -39,6 +39,8 @@
                     </ul>
                 </li>
                 !--->
+                <li><a href="#chefs">Şefler</a></li>
+                <li><a href="#gallery">Galeri</a></li>
                 <li><a href="#contact">İletişim</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
