--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_DefaultMenuViewComponentPartial/Default.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_DefaultMenuViewComponentPartial/Default.cshtml
@@ -7,35 +7,8 @@
     </div><!-- End Section Title -->
 
     <div class="container">
-
-        <ul class="nav nav-tabs d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-
-            <li class="nav-item">
-                <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#menu-starters">
-                    <h4>Starters</h4>
-                </a>
-            </li><!-- End tab nav item -->
-
-            <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-breakfast">
-                    <h4>Breakfast</h4>
-                </a><!-- End tab nav item -->
-
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-lunch">
-                    <h4>Lunch</h4>
-                </a>
-            </li><!-- End tab nav item -->
-
-            <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" data-bs-target="#menu-dinner">
-                    <h4>Dinner</h4>
-                </a>
-            </li><!-- End tab nav item -->
-
-        </ul>
-
+        @await Component.InvokeAsync("_DefaultMenuCategoryComponentPartial")
+       
         <div class="tab-content" data-aos="fade-up" data-aos-delay="200">
 
             <div class="tab-pane fade active show" id="menu-starters">
