Created Testimonials Section & Update ViewImport.cshtml

--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_DefaultMenuCategoryComponentPartial/Default.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_DefaultMenuCategoryComponentPartial/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<APIProjeKampi.WebUI.Dtos.UICategoryDtos.ResultCategoryDto>
+﻿@model List<ResultCategoryDto>
 
 <ul class="nav nav-tabs d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
 
