--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_ServiceDefaultComponentPartial/Default.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_ServiceDefaultComponentPartial/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model List<APIProjeKampi.WebUI.Dtos.ServiceDtos.ResultServiceDto>
+@model List<ResultServiceDto>
 
 <section id="why-us" class="why-us section light-background">
 
