--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/_ViewImports.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using APIProjeKampi.WebUI
 @using APIProjeKampi.WebUI.Models
+@using APIProjeKampi.WebUI.Dtos.UITestimonialDtos
+@using APIProjeKampi.WebUI.Dtos.UIProductDtos
+@using APIProjeKampi.WebUI.Dtos.UICategoryDtos
+@using APIProjeKampi.WebUI.Dtos.ServiceDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
