--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/_ViewImports.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using APIProjeKampi.WebUI.Dtos.UIProductDtos
 @using APIProjeKampi.WebUI.Dtos.UICategoryDtos
 @using APIProjeKampi.WebUI.Dtos.ServiceDtos
+@using APIProjeKampi.WebUI.Dtos.UIChefDto
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
