--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Default/Index.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Default/Index.cshtml
@@ -192,8 +192,9 @@
 
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
-                <h2>Contact</h2>
-                <p><span>Need Help?</span> <span class="description-title">Contact Us</span></p>
+                <h2>İletişim
+                </h2>
+                <p><span>Yardıma ihtiyacınız mı var ?</span> <span class="description-title">Contact Us</span></p>
             </div><!-- End Section Title -->
 
             <div class="container" data-aos="fade-up" data-aos-delay="100">
