Right Settings Panel Completed

--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_NavbarAccountMenuAdminLayoutComponentPartial/Default.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_NavbarAccountMenuAdminLayoutComponentPartial/Default.cshtml
@@ -7,7 +7,7 @@
              class="user-img-radious-style"> <span class="d-sm-none d-lg-inline-block"></span>
     </a>
     <div class="dropdown-menu dropdown-menu-right pullDown">
-        <div class="dropdown-title">Merhaba Muhammet</div>
+        <div class="dropdown-title">Hoşgeldin Muhammet</div>
         <a href="/otika-bootstrap-admin-template/profile.html" class="dropdown-item has-icon">
             <i class="far fa-user"></i> Profil
         </a>
