--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Category/UpdateCategory.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Category/UpdateCategory.cshtml
@@ -1,7 +1,7 @@
-﻿@model CreateCategoryDto
+﻿@model ResultCategoryDto
 
 @{
-    ViewData["Title"] = "CreateCategory";
+    ViewData["Title"] = "UpdateCategory";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
@@ -12,14 +12,15 @@
             <div class="col-12 col-md-12 col-lg-12">
                 <div class="card">
                     <div class="card-header">
-                        <h4>Kategori Ekleme Sayfası</h4>
+                        <h4>Kategori Güncelleme Sayfası</h4>
                     </div>
                     <div class="card-body">
                         <form method="post">
-                            <label>Kategori Adı : </label>
-                            <input type ="text" asp-for="CategoryName" class="form-control"/>
-                            <br/>
-                            <button class="btn btn-primary">Kategori Oluştur </button>
+                            <input type="hidden" asp-for="@Model.CategoryId" />
+                            <label>Kategori Adı</label>
+                            <input type="text" asp-for="CategoryName" class="form-control" />
+                            <br />
+                            <button class="btn btn-success">Kategoriyi Güncelle </button>
                         </form>
                     </div>
                 </div>
@@ -27,6 +28,4 @@
         </div>
     </div>
 </section>
-
-
 
