--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
@@ -10,7 +10,9 @@
         <ul class="sidebar-menu">
             <!-- <li class="menu-header">Main</li> -->
             <li class="dropdown">
+                <a href="/Default/Index" class="nav-link"><i data-feather="home"></i><span>Siteye Git</span></a>
                 <a href="/otika-bootstrap-admin-template/index.html" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
+                <a href="/Category/CategoryList" class="nav-link"><i data-feather="briefcase"></i><span>Kategoriler</span></a>
             </li>
         </ul>
     </aside>
