--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Category/CategoryList.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Category/CategoryList.cshtml
@@ -7,7 +7,6 @@
     int categoryCount=0;
 }
 
-
     <section class="section">
         <div class="section-body">
             <div class="row">
@@ -22,8 +21,8 @@
                                 <tr>
                                     <th scope="col">#</th>
                                     <th scope="col">Kategori Adı</th>
-                                    <th scope="col">Sil</th>
-                                    <th scope="col">Güncelle</th>
+                                    <th scope="col">Kategoriyi Sil</th>
+                                    <th scope="col">Kategoriyi Güncelle</th>
                                 </tr>
                                 </thead>
                                 <tbody>
