--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/AdminLayout/Index.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/AdminLayout/Index.cshtml
@@ -35,7 +35,7 @@
     </div>
     <!-- General JS Scripts -->
     <script src="/otika-bootstrap-admin-template/assets/js/app.min.js"></script>
-    <!-- JS Libraies -->
+    <!-- JS Libraries -->
     <!-- Page Specific JS File -->
     <!-- Template JS File -->
     <script src="/otika-bootstrap-admin-template/assets/js/scripts.js"></script>
@@ -43,6 +43,4 @@
     <script src="/otika-bootstrap-admin-template/assets/js/custom.js"></script>
 </body>
 
-
-<!-- basic-table.html  21 Nov 2019 03:55:20 GMT -->
 </html>
