--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
@@ -4,7 +4,7 @@
     <aside id="sidebar-wrapper">
         <div class="sidebar-brand">
             <a href="/otika-bootstrap-admin-template/index.html">
-                <img alt="image" src="/otika-bootstrap-admin-template/assets/img/logo.png" class="header-logo" /> <span class="logo-name">Yummy</span>
+                <img alt="image" src="/otika-bootstrap-admin-template/assets/img/logo.png" class="header-logo" /> <span class="logo-name">Yummy - Admin</span>
             </a>
         </div>
         <ul class="sidebar-menu">
@@ -12,7 +12,7 @@
             <li class="dropdown">
                 <a href="/Default/Index" class="nav-link"><i data-feather="home"></i><span>Siteye Git</span></a>
                 <a href="/otika-bootstrap-admin-template/index.html" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
-                <a href="/Category/CategoryList" class="nav-link"><i data-feather="briefcase"></i><span>Kategoriler</span></a>
+                <a href="/Category/CategoryList" class="nav-link"><i data-feather="briefcase"></i><span>Kategoriler Sayfası</span></a>
             </li>
         </ul>
     </aside>
