--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_DefaultMenuProductComponentPartial/Default.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_DefaultMenuProductComponentPartial/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ResultProductDTO>
+﻿@model List<ResultProductDto>
 
 <div class="tab-content" data-aos="fade-up" data-aos-delay="200">
 
