Add category selection and display to product view

--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Product/ProductList.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Product/ProductList.cshtml
@@ -21,6 +21,7 @@
                                 <tr>
                                     <th scope="col">#</th>
                                     <th scope="col">Ürün Adı</th>
+                                    <th scope="col">Ürün Kategorisi</th>
                                     <th scope="col">Ürün Fiyatı</th>
                                     <th scope="col">Ürünü Sil</th>
                                     <th scope="col">Ürünü Güncelle</th>
@@ -34,6 +35,7 @@
                                     <tr>
                                         <th scope="row">@categoryCount</th>
                                         <td>@item.ProductName</td>
+                                        <td>@item.CategoryName</td>
                                         <td>@item.Price</td>
                                         <td><a href="/Product/DeleteProduct/@item.ProductId" class="btn btn-danger"> Sil </a></td>
                                         <td><a href="/Product/UpdateProduct/@item.ProductId" class="btn btn-success"> Güncelle </a></td>
