--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Product/CreateProduct.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Product/CreateProduct.cshtml
@@ -26,7 +26,9 @@
                             <br />
 
                             <label>Ürün Kategorisi : </label>
-                            <input type="text" asp-for="CategoryId" class="form-control" />
+                            <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryList">
+                                <option value=""> --Kategori Seçiniz--</option>
+                            </select>
                             <br />
 
                             <label>Ürün Görsel URL : </label>
