--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
@@ -11,8 +11,9 @@
             <!-- <li class="menu-header">Main</li> -->
             <li class="dropdown">
                 <a href="/Default/Index" class="nav-link"><i data-feather="home"></i><span>Siteye Git</span></a>
-                <a href="/otika-bootstrap-admin-template/index.html" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
+                <!--<a href="/otika-bootstrap-admin-template/index.html" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>-->
                 <a href="/Category/CategoryList" class="nav-link"><i data-feather="briefcase"></i><span>Kategoriler Sayfası</span></a>
+                <a href="/Product/ProductList" class="nav-link"><i data-feather="briefcase"></i><span>Ürünler Sayfası</span></a>
             </li>
         </ul>
     </aside>
