--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Product/UpdateProduct.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Product/UpdateProduct.cshtml
@@ -9,23 +9,37 @@
 <div class="col-12 col-md-6 col-lg-12">
     <div class="card">
         <div class="card-header">
-            <h4>Kategori Güncelleme Sayfası</h4>
+            <h4>Ürün Güncelleme Sayfası</h4>
         </div>
         <div class="card-body">
             <form method="post">
-                <input type="hidden" asp-for="CategoryId" class="form-control">
+                <input type="hidden" asp-for="ProductId" class="form-control">
                 <div class="form-group">
                     
-                    <label>Kategori Adı :</label>
+                    <label>Ürün Adı :</label>
                     <input type="text" asp-for="ProductName" class="form-control">
+                    <br />
+                    
+                    <label>Ürün Tanımı :</label>
+                    <input type="text" asp-for="ProductDescription" class="form-control">
                     <br />
                     
                     <label>Ürün Fiyatı :</label>
                     <input type="text" asp-for="Price" class="form-control">
                     <br />
+                    
+                    <label>Ürün Kategorisi : </label>
+                    <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryList">
+                        <option value=""> --Kategori Seçiniz--</option>
+                    </select>
+                    <br />
+                    
+                    <label>Ürün Resmi :</label>
+                    <input type="text" asp-for="ImageURL" class="form-control">
+                    <br />
 
                 </div>
-                <button class="btn btn-primary">Kategori Güncelle</button>
+                <button class="btn btn-primary">Ürünü Güncelle</button>
             </form>
         </div>
     </div>
