--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/Shared/Components/_SidebarAdminLayoutComponentPartial/Default.cshtml
@@ -14,6 +14,7 @@
                 <!--<a href="/otika-bootstrap-admin-template/index.html" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>-->
                 <a href="/Category/CategoryList" class="nav-link"><i data-feather="briefcase"></i><span>Kategoriler Sayfası</span></a>
                 <a href="/Product/ProductList" class="nav-link"><i data-feather="briefcase"></i><span>Ürünler Sayfası</span></a>
+                <a href="/Feature/FeatureList" class="nav-link"><i data-feather="briefcase"></i><span>Feature Sayfası</span></a>
             </li>
         </ul>
     </aside>
