--- a/APIProjeKampi/APIProjeKampi.WebUI/Views/_ViewImports.cshtml
+++ b/APIProjeKampi/APIProjeKampi.WebUI/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using APIProjeKampi.WebUI.Dtos.UICategoryDtos
 @using APIProjeKampi.WebUI.Dtos.ServiceDtos
 @using APIProjeKampi.WebUI.Dtos.UIChefDto
+@using APIProjeKampi.WebUI.Dtos.UIFeatureDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
